FIX:  Mejora de la legibilidad del código

--- a/bombava-frontend/src/styles/Barras.css
+++ b/bombava-frontend/src/styles/Barras.css
@@ -2,9 +2,9 @@
     margin-bottom: 1%;
     width: 30%;
     font-family: 'Georgia';
-    display: flex; 
-    align-items: center;
-    gap: 10px;
+    display: flex; /*Para alinear el icono y la barra en una fila*/
+    align-items: center; 
+    gap: 10px;/*Espacio entre el icono y la barra*/
 }
 
 .barra-icono {
@@ -18,15 +18,13 @@
     border: 3px solid #b38b6d; 
     position: relative;
     border-radius: 20px; 
-    flex-grow: 1;
-    overflow: hidden;
+    flex-grow: 1; /*Hace que la barra ocupe el espacio restante*/
+    overflow: hidden; /*Para que el contenido no se salga de los bordes*/
 }
 
 .barra-contenido {
     height: 100%;
     transition: width 0.5s;
-    align-items: center;
-    padding-left: 10px;
 }
 
 .combustible .barra-contenido {
@@ -46,10 +44,10 @@
 .barra-nombre {
     position: absolute;
     left: 5%;
-    transform: translateY(-7%);
+    transform: translateY(-7%); /*Posiciona el nombre en la posición correcta*/
     color: #ffffff; 
     font-weight: bold;
     font-size: 0.7rem;
-    z-index: 10; 
+    z-index: 10; /*Para que el nombre esté por encima de la barra*/
 }
 
